renaming logs to results

--- a/Experiment1.ipynb
+++ b/Experiment1.ipynb
@@ -55,9 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs_path = 'logs'\n",
-    "acc_path = os.path.join(logs_path, 'my_param_server_acc.csv')\n",
-    "loss_path = os.path.join(logs_path, 'my_param_server_loss.csv')"
+    "results_path = 'results'\n",
+    "acc_path = os.path.join(results_path, 'my_param_server_acc.csv')\n",
+    "loss_path = os.path.join(results_path, 'my_param_server_loss.csv')"
    ]
   },
   {
@@ -140,8 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "builtin_loss_path = os.path.join(logs_path, 'builtin_param_loss.csv')\n",
-    "builtin_acc_path = os.path.join(logs_path, 'builtin_param_acc.csv')\n",
+    "builtin_loss_path = os.path.join(results_path, 'builtin_param_loss.csv')\n",
+    "builtin_acc_path = os.path.join(results_path, 'builtin_param_acc.csv')\n",
     "\n",
     "builtin_loss_df = pd.read_csv(builtin_loss_path)[['lunar-spaceship-8 - train_loss']].rename(columns={'lunar-spaceship-8 - train_loss': 'loss'})\n",
     "builtin_acc_df = pd.read_csv(builtin_acc_path)[['lunar-spaceship-8 - train_acc']].rename(columns={'lunar-spaceship-8 - train_acc': 'acc'})\n",
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_path = os.path.join(logs_path, 'my_param_server_time.csv')\n",
+    "time_path = os.path.join(results_path, 'my_param_server_time.csv')\n",
     "time_df = pd.read_csv(time_path)[['devout-grass-22 - Time']].rename(columns={'devout-grass-22 - Time': 'time'})"
    ]
   },
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "builtin_time_path = os.path.join(logs_path, 'builtin_param_time.csv')\n",
+    "builtin_time_path = os.path.join(results_path, 'builtin_param_time.csv')\n",
     "builtin_time_df = pd.read_csv(builtin_time_path)[['lunar-spaceship-8 - time']].rename(columns={'lunar-spaceship-8 - time': 'time'})"
    ]
   },
@@ -304,8 +304,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_calc_df = pd.read_csv(os.path.join(logs_path, 'my_param_epoch_calc.csv'))\n",
-    "model_send_df = pd.read_csv(os.path.join(logs_path, 'my_param_model_send.csv'))\n",
+    "epoch_calc_df = pd.read_csv(os.path.join(results_path, 'my_param_epoch_calc.csv'))\n",
+    "model_send_df = pd.read_csv(os.path.join(results_path, 'my_param_model_send.csv'))\n",
     "total_epoch_time = 126.1 # in seconds\n",
     "num_epochs = 100\n",
     "avg_epoch_time = total_epoch_time / num_epochs\n",
@@ -396,9 +396,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_epoch_calc = pd.read_csv(os.path.join(logs_path, 'epoch_calc_10k.csv'))\n",
-    "df_model_send = pd.read_csv(os.path.join(logs_path, 'model_send_10k.csv'))\n",
-    "df_sync_wait = pd.read_csv(os.path.join(logs_path, 'sync_wait_10k.csv'))\n",
+    "df_epoch_calc = pd.read_csv(os.path.join(results_path, 'epoch_calc_10k.csv'))\n",
+    "df_model_send = pd.read_csv(os.path.join(results_path, 'model_send_10k.csv'))\n",
+    "df_sync_wait = pd.read_csv(os.path.join(results_path, 'sync_wait_10k.csv'))\n",
     "\n",
     "df_total = pd.concat([df_epoch_calc, df_model_send, df_sync_wait], axis=1)\n",
     "df_total['total_time'] = df_total['epoch_calc_time'] + df_total['model_send_time'] + df_total['sync_time']\n",
