--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs_path = 'logs/'"
+    "results_path = 'results/'"
    ]
   },
   {
@@ -101,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_df = pd.read_csv(logs_path+'r_acc.csv')\n",
-    "loss_df = pd.read_csv(logs_path+'r_loss.csv')\n",
+    "acc_df = pd.read_csv(results_path+'r_acc.csv')\n",
+    "loss_df = pd.read_csv(results_path+'r_loss.csv')\n",
     "\n",
     "acc_loss_df = pd.concat([acc_df, loss_df], axis=1)"
    ]
@@ -169,8 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b_acc_df = pd.read_csv(logs_path+'br_acc.csv')\n",
-    "b_loss_df = pd.read_csv(logs_path+'br_loss.csv')\n",
+    "b_acc_df = pd.read_csv(results_path+'br_acc.csv')\n",
+    "b_loss_df = pd.read_csv(results_path+'br_loss.csv')\n",
     "\n",
     "b_acc_loss_df = pd.concat([b_acc_df, b_loss_df], axis=1)"
    ]
@@ -239,8 +239,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_df = pd.read_csv(logs_path+'r_time.csv').rename(columns={'time': 'Time-From-Scratch'})\n",
-    "b_time_df = pd.read_csv(logs_path+'br_time.csv').rename(columns={'epoch_time': 'Time-Builtin'})\n",
+    "time_df = pd.read_csv(results_path+'r_time.csv').rename(columns={'time': 'Time-From-Scratch'})\n",
+    "b_time_df = pd.read_csv(results_path+'br_time.csv').rename(columns={'epoch_time': 'Time-Builtin'})\n",
     "all_time_df = pd.concat([time_df, b_time_df], axis=1)\n",
     "\n",
     "# make the difference\n",
@@ -383,9 +383,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "share_only_df = pd.read_csv(logs_path+'r_share_only.csv')\n",
-    "share_reduce_df = pd.read_csv(logs_path+'r_share_reduce.csv')\n",
-    "epoch_calc_df = pd.read_csv(logs_path+'r_epoch_calc.csv')"
+    "share_only_df = pd.read_csv(results_path+'r_share_only.csv')\n",
+    "share_reduce_df = pd.read_csv(results_path+'r_share_reduce.csv')\n",
+    "epoch_calc_df = pd.read_csv(results_path+'r_epoch_calc.csv')"
    ]
   },
   {
