experiments added to experiments subdir

--- a/experiments/Experiment1.ipynb
+++ b/experiments/Experiment1.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_path = 'results'\n",
+    "results_path = os.path.join(os.getcwd(), 'results')\n",
     "acc_path = os.path.join(results_path, 'my_param_server_acc.csv')\n",
     "loss_path = os.path.join(results_path, 'my_param_server_loss.csv')"
    ]
