--- a/experiments/Experiment2.ipynb
+++ b/experiments/Experiment2.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_path = 'results/'"
+    "results_path = os.path.join(os.getcwd(), 'results')"
    ]
   },
   {
@@ -101,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_df = pd.read_csv(results_path+'r_acc.csv')\n",
-    "loss_df = pd.read_csv(results_path+'r_loss.csv')\n",
+    "acc_df = pd.read_csv(os.path.join(results_path, 'r_acc.csv'))\n",
+    "loss_df = pd.read_csv(os.path.join(results_path, 'r_loss.csv'))\n",
     "\n",
     "acc_loss_df = pd.concat([acc_df, loss_df], axis=1)"
    ]
