--- a/experiments/Experiment3.ipynb
+++ b/experiments/Experiment3.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_path = 'results/'\n",
+    "results_path = os.path.join(os.getcwd(), 'results')\n",
     "r1_acc = pd.read_csv(os.path.join(results_path, 'r1_acc.csv'))\n",
     "r1_time = pd.read_csv(os.path.join(results_path, 'r1_time.csv'))"
    ]
