changing the root dir to git root

--- a/experiments/Experiment2.ipynb
+++ b/experiments/Experiment2.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,21 +83,24 @@
     "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repo = git.Repo('.', search_parent_directories=True)\n",
+    "\n",
+    "results_path = os.path.join(repo.working_tree_dir, 'results')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_path = os.path.join(os.getcwd(), 'results')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
