--- a/experiments/Experiment3.ipynb
+++ b/experiments/Experiment3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,8 @@
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import git"
    ]
   },
   {
@@ -40,11 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_path = os.path.join(os.getcwd(), 'results')\n",
+    "repo = git.Repo('.', search_parent_directories=True)\n",
+    "\n",
+    "results_path = os.path.join(repo.working_tree_dir, 'results')\n",
     "r1_acc = pd.read_csv(os.path.join(results_path, 'r1_acc.csv'))\n",
     "r1_time = pd.read_csv(os.path.join(results_path, 'r1_time.csv'))"
    ]
