--- a/experiments/Experiment1.ipynb
+++ b/experiments/Experiment1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,8 @@
     "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import git"
    ]
   },
   {
@@ -51,11 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_path = os.path.join(os.getcwd(), 'results')\n",
+    "repo = git.Repo('.', search_parent_directories=True)\n",
+    "\n",
+    "results_path = os.path.join(repo.working_tree_dir, 'results')\n",
     "acc_path = os.path.join(results_path, 'my_param_server_acc.csv')\n",
     "loss_path = os.path.join(results_path, 'my_param_server_loss.csv')"
    ]
